--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="bird"><img src="images.png" alt="Bird"></div>
     </div>
     <div id="result">
-     <h1>Game Over</h1>
+     <h1>Game Over!!!!!!!</h1>
      <p id="text"></p>
      <button id="btn" onclick="location.reload()">Restart</button>
     </div>
